--- a/UI/src/app/app.component.html
+++ b/UI/src/app/app.component.html
@@ -1,7 +1,11 @@
 <main>
-  <header class="brand-name">
+  <a [routerLink]="['/']">
+  <header  class="brand-name">
     <img class="brand-logo" src="/assets/logo.png" alt="logo" aria-hidden="true">
   </header>
+</a>
+<section class="content">
+  <router-outlet></router-outlet>
+</section>
  <hr>
-  <app-login></app-login>
 </main>
