update login and signup component

--- a/UI/src/app/Components/login/login.component.html
+++ b/UI/src/app/Components/login/login.component.html
@@ -2,18 +2,16 @@
   <div class="login-Container">
       <form class="login-form">
     
-          <input type="text" placeholder="Username" formControlName="username">
+          <input type="text" placeholder="Email" formControlName="username">
           <input type="password" placeholder="Password" formControlName="password">
         
         <div class="login-button">
-          <button type="submit" >Login</button>
-          <a [routerLink]="['/signup']">
-          <button   type="button" >Sign-Up POR FAZER</button>
-        </a>
+
+          <button type="submit">Login</button>
+
+            <a [routerLink]="['/signup']">
+          <button type="button">Sign-Up</button>
+            </a>
         </div>
-
-        
-
-      </form>
-    
+      </form>  
   </div>
