--- a/UI/src/app/Components/sign-up/sign-up.component.html
+++ b/UI/src/app/Components/sign-up/sign-up.component.html
@@ -1,36 +1,49 @@
 <div class="login-Container">
-  <form class="login-form">
+  <h1>add user</h1>
+ 
+  
+  <form>
+    <mat-card>
+      <mat-card-content> 
+        <mat-form-field class="mat-50">
+          <mat-label>First Name</mat-label>
+          <input formControlName="firstName" matInput>
+      </mat-form-field>
+      <mat-form-field class="mat-50">
+          <mat-label>Last Name</mat-label>
+          <input matInput formControlName="lastName">
+      </mat-form-field>
 
-    <section>
-  <div class="example-label">Basic</div>
-  <div class="example-button-row">
-    <button mat-button>Basic</button>
-    <button mat-button color="primary">Primary</button>
-    <button mat-button color="accent">Accent</button>
-    <button mat-button color="warn">Warn</button>
-    <button mat-button disabled>Disabled</button>
-    <a mat-button href="https://www.google.com/" target="_blank">Link</a>
-  </div>
-</section>
+      <mat-form-field class="mat-50">
+          <mat-label>Email</mat-label>
+          <input matInput formControlName="email">
+      </mat-form-field>
 
-      <input type="text" placeholder="firstName" formControlName="firstName">
-      <input type="text" placeholder="lastName" formControlName="lastName">
-      <input type="text" placeholder="email" formControlName="email">
-      <input type="password" placeholder="Password" formControlName="password">
+      <mat-form-field class="mat-50">
+        <mat-label>Role</mat-label>
+        <select name="roles" id="roles" >
 
-      <select name="roles" id="roles" >
+          <option disabled selected value>select a role</option>
+          <option value="gestorDeFrota">Gestor de Frota</option>
+          <option value="gestorDeCampus">Gestor de Campus</option>
+          <option value="admin">Admin</option>
+          <option value="estudante">Estudante</option>
+  
+        </select>
+    </mat-form-field>
 
-        <option disabled selected value>select a role</option>
-        <option value="gestorDeFrota">Gestor de Frota</option>
-        <option value="gestorDeCampus">Gestor de Campus</option>
-        <option value="admin">Admin</option>
-        <option value="estudante">Estudante</option>
+    <mat-form-field class="mat-50">
+      <mat-label>Password</mat-label>
+      <input type="password" matInput formControlName="password">
+  </mat-form-field>
+      </mat-card-content>
 
-      </select>
-    
-    <div class="login-button">        
-      <button type="button  ">Sign-Up</button>      
-    </div>
-
-  </form>  
+      <mat-card-footer>
+        <div style="margin:2%;text-align: right;">
+            <button mat-raised-button type="submit" color="primary">Save</button>
+            <button mat-raised-button color="warn" >Clear</button>
+        </div>
+        </mat-card-footer>
+    </mat-card>
+  </form>
 </div>
