--- a/UI/src/app/app.component.html
+++ b/UI/src/app/app.component.html
@@ -1,16 +1,3 @@
 <main>
-  
-  <header  class="brand-name">
-    <a [routerLink]="['/']">
-    <img class="brand-logo" src="/assets/logo.png" alt="logo" aria-hidden="true">
-  </a>
-   <h1>Stupid Simple Campus Simulator</h1>
-  </header>
-
-<hr>
-      
-<section class="content">
-  <router-outlet></router-outlet>
-</section>
-
+  <app-menu-bar></app-menu-bar>
 </main>
