--- a/UI/src/app/Components/menu-bar/menu-bar.component.html
+++ b/UI/src/app/Components/menu-bar/menu-bar.component.html
@@ -24,13 +24,13 @@
             <button routerLink="/Buildings" mat-button><i class="fa-solid fa-building"></i> Buildings</button>
         </mat-list-item>
         <mat-list-item>
-            <button routerLink="" mat-button><i class="fa-solid fa-kaaba"></i> Floors</button>
+            <button routerLink="/Floors" mat-button><i class="fa-solid fa-kaaba"></i> Floors</button>
         </mat-list-item>
         <mat-list-item>
-            <button routerLink="/Passages" mat-button><i class="fa-solid fa-elevator"></i> Elevators</button>
+            <button routerLink="" mat-button><i class="fa-solid fa-elevator"></i> Elevators</button>
         </mat-list-item>
         <mat-list-item>
-          <button routerLink="" mat-button><i class="fa-solid fa-bridge"></i> Passages</button>
+          <button routerLink="Passages" mat-button><i class="fa-solid fa-bridge"></i> Passages</button>
       </mat-list-item>
       <mat-list-item>
         <button routerLink="" mat-button><i class="fa-solid fa-robot"></i> Robots</button>
