--- a/UI/src/app/Components/sign-up/sign-up.component.html
+++ b/UI/src/app/Components/sign-up/sign-up.component.html
@@ -1,49 +1,31 @@
-<div class="login-Container">
-  <h1>add user</h1>
+<mat-tab-group>
+  <mat-tab label="Create User">
+    <form>
+    <br>
+    <br>
+    <h3>Create User</h3>
+    <br>
+    <input type="text" placeholder="FirstName" id="firstName" name="firstName" [(ngModel)]="data.firstName" [ngModelOptions]="{ standalone: true }"><br><br>
+        <input type="text" placeholder="LastName" id="lastName" name="lastName" [(ngModel)]="data.lastName" [ngModelOptions]="{ standalone: true }"><br><br>
+        <input type="text" placeholder="Email" id="email" name="email" [(ngModel)]="data.email" [ngModelOptions]="{ standalone: true }"><br><br>
+        <input type="password" placeholder="Password" id="password" name="password" [(ngModel)]="data.password" [ngModelOptions]="{ standalone: true }"><br><br>
+        <select name="role" id="role" [(ngModel)]="data.role" [ngModelOptions]="{ standalone: true }">
+          <option selected disabled>select a role</option>
+          <option value="ce3748a3-d7b2-4389-8847-c20a36a9a810">Gestor de Frota</option>
+          <option value="21d78217-a85b-412e-aa6c-9e17a19d0cd5">Gestor de Campus</option>
+          <option value="2e3ab845-cbcb-48ff-b94f-77819ddb6880">Admin</option>
+          <option value="2a73d511-1ac8-410f-9d92-099e28921f4b">Estudante</option>
+        </select>
+        
+
+        <br><br>
+       
+
+    <br>
+    <input (click)="createUser()" type="submit" value="Create">
+  </form>
+</mat-tab>
  
   
-  <form>
-    <mat-card>
-      <mat-card-content> 
-        <mat-form-field class="mat-50">
-          <mat-label>First Name</mat-label>
-          <input formControlName="firstName" matInput>
-      </mat-form-field>
-      <mat-form-field class="mat-50">
-          <mat-label>Last Name</mat-label>
-          <input matInput formControlName="lastName">
-      </mat-form-field>
-
-      <mat-form-field class="mat-50">
-          <mat-label>Email</mat-label>
-          <input matInput formControlName="email">
-      </mat-form-field>
-
-      <mat-form-field class="mat-50">
-        <mat-label>Role</mat-label>
-        <select name="roles" id="roles" >
-
-          <option disabled selected value>select a role</option>
-          <option value="gestorDeFrota">Gestor de Frota</option>
-          <option value="gestorDeCampus">Gestor de Campus</option>
-          <option value="admin">Admin</option>
-          <option value="estudante">Estudante</option>
-  
-        </select>
-    </mat-form-field>
-
-    <mat-form-field class="mat-50">
-      <mat-label>Password</mat-label>
-      <input type="password" matInput formControlName="password">
-  </mat-form-field>
-      </mat-card-content>
-
-      <mat-card-footer>
-        <div style="margin:2%;text-align: right;">
-            <button mat-raised-button type="submit" color="primary">Save</button>
-            <button mat-raised-button color="warn" >Clear</button>
-        </div>
-        </mat-card-footer>
-    </mat-card>
-  </form>
-</div>
+   
+</mat-tab-group>
