Add UI for Buildings / Robot / RobotTypes

--- a/UI/src/app/Components/menu-bar/menu-bar.component.html
+++ b/UI/src/app/Components/menu-bar/menu-bar.component.html
@@ -27,14 +27,22 @@
             <button routerLink="/Floors" mat-button><i class="fa-solid fa-kaaba"></i> Floors</button>
         </mat-list-item>
         <mat-list-item>
-            <button routerLink="" mat-button><i class="fa-solid fa-elevator"></i> Elevators</button>
+          <button routerLink="/Rooms" mat-button><i class="fa-solid fa-door-closed"></i> Rooms</button>
+      </mat-list-item>
+        <mat-list-item>
+            <button routerLink="/Elevators" mat-button><i class="fa-solid fa-elevator"></i> Elevators</button>
         </mat-list-item>
         <mat-list-item>
-          <button routerLink="Passages" mat-button><i class="fa-solid fa-bridge"></i> Passages</button>
+          <button routerLink="/Passages" mat-button><i class="fa-solid fa-bridge"></i> Passages</button>
       </mat-list-item>
       <mat-list-item>
-        <button routerLink="" mat-button><i class="fa-solid fa-robot"></i> Robots</button>
+        <button routerLink="/Robots" mat-button><i class="fa-solid fa-robot"></i> Robots</button>
     </mat-list-item>
+    <mat-list-item>
+      <button routerLink="/RobotType" mat-button><i class="fa-solid fa-bolt"></i> RobotType</button>
+  </mat-list-item>
+ 
+  <br><br><br><br><br>
     <mat-list-item>
       <button routerLink="/signup" mat-raised-button color="accent">Sign-Up</button>
   </mat-list-item>
