--- a/UI/src/app/Components/CreatePassages/CreatePassages.component.html
+++ b/UI/src/app/Components/CreatePassages/CreatePassages.component.html
@@ -49,7 +49,7 @@
           <!-- Name Column -->
           <ng-container matColumnDef="building1">
             <th mat-header-cell *matHeaderCellDef> Building1 </th>
-            <td mat-cell *matCellDef="let element"> {{element.buidling1}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.building1}} </td>
           </ng-container>
         
           <!-- Weight Column -->
