Add resfresh button for lists

--- a/UI/src/app/Components/buildings/buildings.component.html
+++ b/UI/src/app/Components/buildings/buildings.component.html
@@ -34,6 +34,7 @@
     <form>
      
         <br>
+        <button  (click)="get()" mat-button><i class="fa-solid fa-rotate"></i></button>
        
         <table mat-table [dataSource]="ListBuildings" class="mat-elevation-z8" >
 
