--- a/UI/src/app/Components/robot-type/robot-type.component.html
+++ b/UI/src/app/Components/robot-type/robot-type.component.html
@@ -30,7 +30,8 @@
     <form>
      
         <br>
-       
+        <button  (click)="get()" mat-button><i class="fa-solid fa-rotate"></i></button>
+
         <table mat-table [dataSource]="ListRobotType" class="mat-elevation-z8" >
 
           <!--- Note that these columns can be defined in any order.
