--- a/UI/src/app/Components/floor/floors.component.html
+++ b/UI/src/app/Components/floor/floors.component.html
@@ -1,72 +1,142 @@
 <mat-tab-group>
-  <mat-tab label="Create Floor"><form>
-    <br>
-    <br>
-    <h3>Create Floor</h3>
-    <br>
-    <input type="text" placeholder="Name" id="name" name="name" [(ngModel)]="data.name" [ngModelOptions]="{ standalone: true }"><br><br>
-        <input type="text" placeholder="Description" id="description" name="description" [(ngModel)]="data.description" [ngModelOptions]="{ standalone: true }"><br><br>
-        <input type="text" placeholder="BuildingName" id="buildingName" name="buildingName" [(ngModel)]="data.buildingName" [ngModelOptions]="{ standalone: true }"><br><br>
-     
-        
-    <br>
-    <input (click)="createFloor()" type="submit" value="Create">
-  </form></mat-tab>
-  <mat-tab label="Update Floor">
-    <br>
-    <br>
-    <h3>Update Floor</h3>
-    <br>
+  <mat-tab label="Create Floor">
     <form>
-        <input type="text" placeholder="Floor Id" id="id" name="id" [(ngModel)]="data.id" [ngModelOptions]="{ standalone: true }"><br><br>
-        <input type="text" placeholder="Name" id="name" name="name" [(ngModel)]="data.name" [ngModelOptions]="{ standalone: true }"><br><br>
-        <input type="text" placeholder="Description" id="description" name="description" [(ngModel)]="data.description" [ngModelOptions]="{ standalone: true }"><br><br>
-        <input type="text" placeholder="BuildingName" id="buildingName" name="buildingName" [(ngModel)]="data.buildingName" [ngModelOptions]="{ standalone: true }"><br><br>
-        
-        <br>
-        <input (click)="updateFloor()" type="submit" value="Update">
-    </form> </mat-tab>
-  <mat-tab label="See all Floors"> 
+      <br>
+      <br>
+      <h3>Create Floor</h3>
+      <br>
+      <input type="text" placeholder="Name" id="name" name="name" [(ngModel)]="data.name" [ngModelOptions]="{ standalone: true }"><br><br>
+      <input type="text" placeholder="Description" id="description" name="description" [(ngModel)]="data.description" [ngModelOptions]="{ standalone: true }"><br><br>
+      <input type="text" placeholder="BuildingName" id="buildingName" name="buildingName" [(ngModel)]="data.buildingName" [ngModelOptions]="{ standalone: true }"><br><br>
+      <br>
+      <input (click)="createFloor()" type="submit" value="Create">
+    </form>
+  </mat-tab>
+
+  <mat-tab label="Update Floor">
+    <form>
+      <br>
+      <br>
+      <h3>Update Floor</h3>
+      <br>
+      <input type="text" placeholder="Floor Id" id="id" name="id" [(ngModel)]="data.id" [ngModelOptions]="{ standalone: true }"><br><br>
+      <input type="text" placeholder="Name" id="name" name="name" [(ngModel)]="data.name" [ngModelOptions]="{ standalone: true }"><br><br>
+      <input type="text" placeholder="Description" id="description" name="description" [(ngModel)]="data.description" [ngModelOptions]="{ standalone: true }"><br><br>
+      <input type="text" placeholder="BuildingName" id="buildingName" name="buildingName" [(ngModel)]="data.buildingName" [ngModelOptions]="{ standalone: true }"><br><br>
+      <br>
+      <input (click)="updateFloor()" type="submit" value="Update">
+    </form>
+  </mat-tab>
+
+  <mat-tab label="See all Floors">
+    <form>
+      <br>
+      <button (click)="get()" mat-button><i class="fa-solid fa-rotate"></i></button>
+
+      <table mat-table [dataSource]="ListFloors" class="mat-elevation-z8">
+        <!-- Position Column -->
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> ID. </th>
+          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Floor Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+        <!-- Description Column -->
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef> Description </th>
+          <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+        </ng-container>
+
+        <!-- BuildingName Column -->
+        <ng-container matColumnDef="buildingName">
+          <th mat-header-cell *matHeaderCellDef> Building name </th>
+          <td mat-cell *matCellDef="let element"> {{element.buildingName}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </form>
+  </mat-tab>
+
+  <mat-tab label="Get all floors from a building">
     <br> 
     <br>
+    <h3>Get list of passages between 2 buildings</h3>
     <br>
     <form>
-     
+      <input type="text" placeholder="Building" id="buildingName" name="buildingName" [(ngModel)]="data.buildingName" [ngModelOptions]="{ standalone: true }"><br><br>
         <br>
-       
-        <table mat-table [dataSource]="ListFloors" class="mat-elevation-z8" >
+        <input (click)="findFloorsByBuildingName()" type="submit" value="Get">
+      <table mat-table [dataSource]="ListFloors" class="mat-elevation-z8">
+       <!-- Position Column -->
+       <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> ID. </th>
+        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      </ng-container>
 
-          <!--- Note that these columns can be defined in any order.
-                The actual rendered columns are set as a property on the row definition" -->
-        
-          <!-- Position Column -->
-          <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef> ID. </th>
-            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-          </ng-container>
-        
-          <!-- Name Column -->
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Floor Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-          </ng-container>
-        
-          <!-- Weight Column -->
-          <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef> Description </th>
-            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-          </ng-container>
-        
-          <!-- Symbol Column -->
-          <ng-container matColumnDef="buildingName">
-            <th mat-header-cell *matHeaderCellDef> Building name </th>
-            <td mat-cell *matCellDef="let element"> {{element.buildingName}} </td>
-          </ng-container>
-        
-        
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Floor Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
+
+      <!-- Description Column -->
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef> Description </th>
+        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+      </ng-container>
+
+      <!-- BuildingName Column -->
+      <ng-container matColumnDef="buildingName">
+        <th mat-header-cell *matHeaderCellDef> Building name </th>
+        <td mat-cell *matCellDef="let element"> {{element.buildingName}} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
     </form>
-    </mat-tab>
+  </mat-tab>
+
+  <mat-tab label="Get all floors with passages to other buildings">
+    <form>
+      <br>
+      <button (click)="findFloorsWithPassages()" mat-button><i class="fa-solid fa-rotate"></i></button>
+
+      <table mat-table [dataSource]="ListFloors" class="mat-elevation-z8">
+       <!-- Position Column -->
+       <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> ID. </th>
+        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Floor Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
+
+      <!-- Description Column -->
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef> Description </th>
+        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+      </ng-container>
+
+      <!-- BuildingName Column -->
+      <ng-container matColumnDef="buildingName">
+        <th mat-header-cell *matHeaderCellDef> Building name </th>
+        <td mat-cell *matCellDef="let element"> {{element.buildingName}} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </form>
+  </mat-tab>
 </mat-tab-group>
