--- a/UI/src/app/Components/floor/floors.component.html
+++ b/UI/src/app/Components/floor/floors.component.html
@@ -67,13 +67,13 @@
   <mat-tab label="Get all floors from a building">
     <br> 
     <br>
-    <h3>Get list of passages between 2 buildings</h3>
+    <h3>Get all floors from a building</h3>
     <br>
     <form>
       <input type="text" placeholder="Building" id="buildingName" name="buildingName" [(ngModel)]="data.buildingName" [ngModelOptions]="{ standalone: true }"><br><br>
         <br>
         <input (click)="findFloorsByBuildingName()" type="submit" value="Get">
-      <table mat-table [dataSource]="ListFloors" class="mat-elevation-z8">
+      <table mat-table [dataSource]="ListFloorsBuilding" class="mat-elevation-z8">
        <!-- Position Column -->
        <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> ID. </th>
@@ -109,7 +109,7 @@
       <br>
       <button (click)="findFloorsWithPassages()" mat-button><i class="fa-solid fa-rotate"></i></button>
 
-      <table mat-table [dataSource]="ListFloors" class="mat-elevation-z8">
+      <table mat-table [dataSource]="ListFloorsPassages" class="mat-elevation-z8">
        <!-- Position Column -->
        <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> ID. </th>
