--- a/UI/src/app/Components/robots/robots.component.html
+++ b/UI/src/app/Components/robots/robots.component.html
@@ -100,7 +100,7 @@
     <input type="text" placeholder="Robot Designation" id="designation" name="designation" [(ngModel)]="data.designation" [ngModelOptions]="{ standalone: true }"><br><br>
       <br>
       <input (click)="findByDesignation()" type="submit" value="Get">
-    <table mat-table [dataSource]="ListRobots" class="mat-elevation-z8">
+    <table mat-table [dataSource]="ListRobotsDesignation" class="mat-elevation-z8">
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> ID. </th>
         <td mat-cell *matCellDef="let element"> {{element.id}} </td>
@@ -147,7 +147,7 @@
     <input type="text" placeholder="RobotType" id="type" name="type" [(ngModel)]="data.type" [ngModelOptions]="{ standalone: true }"><br><br>
       <br>
       <input (click)="findByTask()" type="submit" value="Get">
-    <table mat-table [dataSource]="ListRobots" class="mat-elevation-z8">
+    <table mat-table [dataSource]="ListRobotsType" class="mat-elevation-z8">
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> ID. </th>
         <td mat-cell *matCellDef="let element"> {{element.id}} </td>
