--- a/UI/src/app/Components/menu-bar/menu-bar.component.html
+++ b/UI/src/app/Components/menu-bar/menu-bar.component.html
@@ -27,7 +27,7 @@
             <button routerLink="/Floors" mat-button><i class="fa-solid fa-kaaba"></i> Floors</button>
         </mat-list-item>
         <mat-list-item>
-          <button routerLink="/Rooms" mat-button><i class="fa-solid fa-door-closed"></i> Rooms</button>
+          <button routerLink= "" mat-button><i class="fa-solid fa-door-closed"></i> Rooms</button>
       </mat-list-item>
         <mat-list-item>
             <button routerLink="/Elevators" mat-button><i class="fa-solid fa-elevator"></i> Elevators</button>
