--- a/UI/src/app/Components/elevators/elevators.component.html
+++ b/UI/src/app/Components/elevators/elevators.component.html
@@ -1,30 +1,32 @@
 <mat-tab-group>
-    <mat-tab label="Create Elevator">
-      <form>
-        <br>
-        <br>
-        <h3>Create Elevator</h3>
-        <br>
-        <input type="text" placeholder="Building Name" id="buildingName" name="buildingName" [(ngModel)]="data.buildingName" [ngModelOptions]="{ standalone: true }"><br><br>
-        <input type="text" placeholder="Floors" id="floors" name="floors" [(ngModel)]="data.floors" [ngModelOptions]="{ standalone: true }"><br><br>
-        <br>
-        <input (click)="createElevator()" type="submit" value="Create">
-      </form>
-    </mat-tab>
-  
-    <mat-tab label="Update Elevator">
+  <mat-tab label="Create Elevator">
+    <form>
       <br>
       <br>
-      <h3>Update Elevator</h3>
+      <h3>Create Elevator</h3>
       <br>
-      <form>
-        <input type="text" placeholder="Elevator ID" id="id" name="id" [(ngModel)]="data.id" [ngModelOptions]="{ standalone: true }"><br><br>
-        <input type="text" placeholder="Building Name" id="buildingName" name="buildingName" [(ngModel)]="data.buildingName" [ngModelOptions]="{ standalone: true }"><br><br>
-        <input type="text" placeholder="Floors" id="floors" name="floors" [(ngModel)]="data.floors" [ngModelOptions]="{ standalone: true }"><br><br>
-        <br>
-        <input (click)="updateElevator()" type="submit" value="Update">
-      </form>
-    </mat-tab>
+      <input type="text" placeholder="Building Name" id="buildingName" name="buildingName" [(ngModel)]="data.buildingName" [ngModelOptions]="{ standalone: true }"><br><br>
+      <input type="text" placeholder="Floors" id="floors" name="floors" [(ngModel)]="floorName" [ngModelOptions]="{ standalone: true }"><br><br>
+    
+      <input (click)="addFloor()" type="submit" value="Add Floor">
+      <br>
+      <input (click)="createElevator()" type="submit" value="Create">
+    </form>
+  </mat-tab>
+
+  <mat-tab label="Update Elevator">
+    <br>
+    <br>
+    <h3>Update Elevator</h3>
+    <br>
+    <form>
+      <input type="text" placeholder="Elevator ID" id="id" name="id" [(ngModel)]="data.id" [ngModelOptions]="{ standalone: true }"><br><br>
+      <input type="text" placeholder="Building Name" id="buildingName" name="buildingName" [(ngModel)]="data.buildingName" [ngModelOptions]="{ standalone: true }"><br><br>
+      <input type="text" placeholder="Floors (comma-separated)" id="floors" name="floors" [(ngModel)]="data.floors" [ngModelOptions]="{ standalone: true }"><br><br>
+      <br>
+      <input (click)="updateElevator()" type="submit" value="Update">
+    </form>
+  </mat-tab>
   
     <mat-tab label="List Elevators in Building">
       <br>
